# nix-pi-pico

./: .gitignore  CMakeLists.txt  main.cpp  shell.nix
hello_world/: CMakeLists.txt  hello_world.c
